# cursoUnity

./: .gitignore
Arrays and Lists/Exercise 12/Exercise12/: Program.cs
Arrays and Lists/Exercise 13/: Exercise 13.sln  Program.cs
Arrays and Lists/Exercise 14/: Exercise 14.csproj
Arrays/Exercise 11/Exercise11/: Program.cs
C# Class Development/Abstraction/Exercise 2/: Exercise 2.sln
C# Class Development/Assessment/ProgrammingAssignment1/: Egg.cs
C# Class Development/Console App Classes/Exercise 4/: Apple.cs  Exercise 4.sln  Program.cs
C# Class Development/Console App Classes/Teste3/: CMakeLists.txt  Teste3.cpp  Teste3.h
Exercise 1/: Exercise 1.sln
Exercise 1/Assets/Scripts/: Jumper.cs
Exercise 2/: Program.cs
Exercise 3/Assets/Scripts/: Resizer.cs
Exercise 4/Assets/Animations/: Exploding.anim
Exercise 4/Assets/Controllers/: ExplosionController.controller
Exercise 4/Assets/Prefabs/: Explosion.prefab  TeddyBear.prefab
Exercise 4/Assets/Scenes/: SampleScene.unity
Exercise 4/Assets/Scripts/: Explosion.cs  TeddyBear.cs
Iteration/Exercise 8/: Exercise 8.sln
Iteration/Exercise 9/: Exercise 9.sln
More C# Programming and Unity/Arrays and Lists/Exercise 14/: Exercise 14.sln  Program.cs
More C# Programming and Unity/Iteration/Exercise 10/: Exercise 10.sln  (+1 more)
Projetos extras/Shoot Game/: Shoot Game.sln
Projetos extras/Shoot and Dodge Game/: .gitignore  Assembly-CSharp.csproj  Shoot and Dodge Game.sln
Selection/Exercise 3/: Exercise 3.sln
Unity Input/Exercise 5/: Exercise 5.sln
Unity Input/Ship Project/: Ship 101 Project.sln  Ship Project.sln
(+51 files in other folders)
